<resources>

    <string name="app_name">Tiktok</string>
    <string name="app_record">Record Video</string>

    //string for sign up screen
    <string name="signUp">Sign Up.</string>
    <string name="yourName">Your Name</string>
    <string name="nameHint">Enter Your Full Name</string>
    <string name="emailid">Your Email Address</string>
    <string name="emailHint">Email Address</string>
    <string name="password">Your Password</string>
    <string name="passwordHint">Password</string>
    <string name="phone_hint"> Enter Your Contact Number</string>
    <string name="phone">Contact Number</string>

    //Forgot password
    <string name="contact_number">Enter phone number</string>
    <string name="Enter_otp">Enter OTP</string>
    <string name="verify_password_btn">Verify OTP</string>
    <string name="enter_otp_edt_hint">Enter Otp</string>



    // string for login screen
    <string name="login_heading1">You need a TikTok</string>
    <string name="login_heading2">account to continue</string>
    <string name="username">User Name</string>
    <string name="login_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="social_media">Sign-in with Social Media</string>
    <string name="continue_as_guest">CONTINUE AS GUEST</string>


    //privacy and settings
    <string name="privacy_setting">Privacy and Settings</string>
    <string name="account">ACCOUNT</string>
    <string name="manage_account">Manage My Account</string>
    <string name="privacy_safety">Privacy and Safety</string>
    <string name="share_profile">Share Profile</string>
    <string name="general">GENERAL</string>
    <string name="push_notification">Push Notification</string>
    <string name="live_photo">Live Photo</string>
    <string name="general_settings">General Settings</string>
    <string name="about">ABOUT</string>
    <string name="help_centre">Help Centre</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright_policy">Copyright Policy</string>
    <string name="report_problem">Report a Problem</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="logout">Log Out</string>

    //icons
    <string name="user_icon">&amp;#xf2bd;</string>
    <string name="password_icon">&amp;#xf023;</string>

    //bottom navigation
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Feeds</string>
    <string name="title_profile">Profile</string>

    //manage my account
    <string name="my_tiktok_code">My Tiktok Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="tiktok_password">Password</string>


    //Privacy and safety
    <string name="allow_other_to_find_me">Allow Others to Find me</string>
    <string name="private_account">Private Account</string>
    <string name="safety">Safety</string>
    <string name="who_send_comment">Who can send me comment</string>
    <string name="who_react_to_me">Who can React to me</string>
    <string name="who_can_duet_with_me">Who can duet with me</string>
    <string name="who_send_me_msg">Who can send me Message</string>
    <string name="allow_download">Allow Download</string>
    <string name="block_list">Block List</string>

    //report a problem
    <string name="i_hv_feedback">I have feedback</string>
    <string name="issue_wuth_account">I have an issue with my account</string>
    <string name="issue_with_video">i have an issue with my video</string>
    <string name="issue_with_audio">I have an isue with audio</string>
    <string name="app_crashing">App keeps crashing, lagging or freezing</string>
    <string name="issue_with_follow_comment">I have an issue with follow,like, comment feature</string>
    <string name="issue_with_direct_message">i have an issue with direct message</string>
    <string name="issue_with_notification">I have an issue with notification</string>
    <string name="issue_with_live">I have an issue with live</string>
    <string name="issue_with_transaction">i have an issue with transaction</string>
    <string name="issue_with_search_share">I have an issue with search, feed, share</string>
    <string name="account_migration">musical.ly and Tik Tok Account Migration</string>
    <string name="abuse_report">Abuse Report</string>
    <string name="other">Other</string>


    <string name="networkError_Message">Network connection appears to be disconnected, please check your internet connection.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">2636315819728899</string>
    <string name="fb_login_protocol_scheme">fb2636315819728899</string>


    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="profile_photo">Profile Video</string>
    <!--//video trim.....\\-->

    <string name="capture_using_camera">Capture using camera</string>
    <string name="gallery">Gallery</string>
    <string name="need_permission">Need permission</string>
    <string name="app_settings">Settings</string>
    <string name="critical_permission_denied">Critical Permission Denied</string>
    <string name="allow">Allow</string>
    <string name="permission_gallery_camera">We need Gallery and Camera permissions to have video selection</string>
    <string name="toast_cannot_retrieve_selected_video">Can not retrieve selected video</string>
    <string name="str_cropping_video_please_wait">Cropping Video Please Wait</string>
    <string name="thumb_image_for_cropped_video">Thumb Image for cropped video:</string>


    <string name="empty_screen">Oops!! An unexpected error occurred</string>
    <string name="please_retry">Please retry after sometime</string>
    <string name="retry">Retry</string>



</resources>
