<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SideNavigationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/back_arrow_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size10"
                    android:background="@mipmap/arrow_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/size15"
                    android:text="Privacy and Settings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size1"
                android:background="@color/black" />
        </LinearLayout>


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size15"
                    android:text="@string/account"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/manage_my_account" />

                    <TextView
                        android:id="@+id/manage_account_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/manage_account"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/privacy_and_safety" />

                    <TextView
                        android:id="@+id/privacy_safety_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/privacy_safety"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/share_profile" />

                    <TextView
                        android:id="@+id/share_profile_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/share_profile"
                        android:textColor="@color/black" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size1"
                    android:layout_marginTop="@dimen/size15"
                    android:background="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size15"
                    android:text="@string/general"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/push_notification" />

                    <TextView
                        android:id="@+id/push_notification_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/push_notification"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/live_photo" />

                    <TextView
                        android:id="@+id/live_photo_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/live_photo"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/general_setting" />

                    <TextView
                        android:id="@+id/general_settings_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/general_settings"
                        android:textColor="@color/black" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size1"
                    android:layout_marginTop="@dimen/size15"
                    android:background="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size15"
                    android:text="@string/about"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/help_centre" />

                    <TextView
                        android:id="@+id/help_centre_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/help_centre"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/terms_of_use" />

                    <TextView
                        android:id="@+id/terms_of_use_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/terms_of_use"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/privacy_policy" />

                    <TextView
                        android:id="@+id/privacy_policy_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/copy_right_policy" />

                    <TextView
                        android:id="@+id/copyright_policy_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/copyright_policy"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/report_a_problem" />

                    <TextView
                        android:id="@+id/report_problem_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/report_problem"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/clear_cache" />

                    <TextView
                        android:id="@+id/clear_cache_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/clear_cache"
                        android:textColor="@color/black" />


                    <TextView
                        android:id="@+id/cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="1"
                        android:layout_marginLeft="@dimen/size140"/>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size1"
                    android:layout_marginTop="@dimen/size15"
                    android:background="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size15"
                    android:layout_marginBottom="@dimen/size15"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/size20"
                        android:layout_height="@dimen/size20"
                        android:layout_marginLeft="@dimen/size20"
                        android:background="@mipmap/logout" />

                    <TextView
                        android:id="@+id/logout_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size20"
                        android:text="@string/logout"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>