<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/pink"
            android:textSize="@dimen/textsize40"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize14"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/verify_id_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size40"
                android:layout_margin="@dimen/size10"
                android:background="@drawable/rectangle_sign_up"
                android:gravity="center"
                android:hint="Enter Email Id "
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textsize14" />
        </LinearLayout>


        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size40"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginTop="@dimen/size30"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/sign_up_button"
            android:onClick="onClick"
            android:text="Submit"
            android:textColor="@color/sign_up_background"
            android:textSize="@dimen/textsize20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_password_btn"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize14"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/verify_otp_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size40"
                android:layout_margin="@dimen/size10"
                android:background="@drawable/rectangle_sign_up"
                android:gravity="center"
                android:hint="@string/enter_otp_edt_hint"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textSize="@dimen/textsize14" />
        </LinearLayout>


        <Button
            android:id="@+id/verify_otp_btn"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/size40"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginTop="@dimen/size30"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/sign_up_button"
            android:onClick="onClick"
            android:text="@string/verify_password_btn"
            android:textColor="@color/sign_up_background"
            android:textSize="@dimen/textsize20" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>